// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for fullyEligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsNotMax": null,
    "usTnAtLeast12MonthsSinceLatestAssessment": {
      "AnnualReclassificationDate": "2025-01-01",
      "AnnualReclassificationDecisionDate": "2025-01-01",
      "initialAssessmentDate": "2024-12-28",
    },
  },
  "externalId": "RES003",
  "formInformation": {
    "q1Notes": {
      "listPriorNonTdocConvictions60Months": "some offense on 12/1/2022",
      "listPriorViolentTdocConvictions60Months": "some other offense on 8/22/2021",
    },
    "q1Score": 2,
    "q2Notes": "a third offense",
    "q2Score": 10,
    "q3Notes": [
      {
        "incidentTimePeriod": "0-60Months",
        "incidents": [
          {
            "incidentDate": 2023-01-08T00:00:00.000Z,
            "incidentTypeCode": "ABC",
          },
        ],
        "numIncidents": 1,
      },
    ],
    "q3Score": -3,
    "q4Notes": [],
    "q4Score": 2,
    "q5Notes": [],
    "q5Score": -1,
    "q6Notes": {
      "age": 37,
    },
    "q6Score": 0,
    "q7Notes": "Completed ABC (Letter stitching) on 2/2/2022
Completed XYZ (Xylophone Ensemble) on 4/4/2024",
    "q7Score": 1,
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_TN",
}
`;

exports[`schema for ineligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {},
  "externalId": "RES003",
  "formInformation": {
    "q1Notes": {
      "listPriorNonTdocConvictions60Months": "some offense on 12/1/2022",
      "listPriorViolentTdocConvictions60Months": "some other offense on 8/22/2021",
    },
    "q1Score": 2,
    "q2Notes": "a third offense, a fourth offense",
    "q2Score": 10,
    "q3Notes": [
      {
        "incidentTimePeriod": "0-6Months",
        "incidents": [
          {
            "incidentDate": 2023-01-08T00:00:00.000Z,
            "incidentTypeCode": "ABC",
          },
          {
            "incidentDate": 2022-02-11T00:00:00.000Z,
            "incidentTypeCode": "XYZ",
          },
        ],
        "numIncidents": 2,
      },
      {
        "incidentTimePeriod": "24-48Months",
        "incidents": [
          {
            "incidentDate": 2021-01-08T00:00:00.000Z,
            "incidentTypeCode": "RFV",
          },
          {
            "incidentDate": 2020-02-11T00:00:00.000Z,
            "incidentTypeCode": "IKM",
          },
        ],
        "numIncidents": 2,
      },
    ],
    "q3Score": -3,
    "q4Notes": [
      {
        "incidentTimePeriod": "6-12Months",
        "incidents": [
          {
            "incidentDate": 2023-01-08T00:00:00.000Z,
            "incidentTypeCode": "DEF",
          },
        ],
        "numIncidents": 1,
      },
    ],
    "q4Score": 2,
    "q5Notes": [
      {
        "incidentTimePeriod": "12-24Months",
        "incidents": [
          {
            "incidentDate": 2023-01-08T00:00:00.000Z,
            "incidentTypeCode": "HIJ",
          },
        ],
        "numIncidents": 1,
      },
    ],
    "q5Score": -1,
    "q6Notes": {
      "age": 26,
    },
    "q6Score": 0,
    "q7Notes": "",
    "q7Score": 1,
  },
  "ineligibleCriteria": {
    "custodyLevelIsNotMax": {
      "custodyLevel": "Maximum",
    },
    "usTnAtLeast12MonthsSinceLatestAssessment": {
      "AnnualReclassificationDate": "2025-01-01",
      "AnnualReclassificationDecisionDate": "2025-01-01",
      "initialAssessmentDate": "2024-12-28",
    },
  },
  "isAlmostEligible": false,
  "isEligible": false,
  "metadata": {},
  "stateCode": "US_TN",
}
`;
